--- a/styles.css
+++ b/styles.css
@@ -102,8 +102,8 @@ hr {
 .window-text {
 	position: relative;
 	z-index: 1;
-	margin: 0 28px 28px 0;
-	padding: 2px;
+	margin-right: 28px;
+	padding: 4px;
 	background-color: rgb(255,255,255);
 }
 
@@ -156,8 +156,12 @@ hr {
 	box-shadow: inset -2px -2px rgb(223,223,223);
 }
 
-.right-scroll-bar, .bottom-scroll-bar {
+.right-scroll-bar {
 	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	width: 28px;
 	background-image:
 		linear-gradient(45deg, rgb(255,255,255) 25%, transparent 25%),
 		linear-gradient(135deg, rgb(255,255,255) 25%, transparent 25%),
@@ -167,28 +171,15 @@ hr {
 	background-position: 0 0, 2px 0, 2px -2px, 0px 2px;
 }
 
-.right-scroll-bar {
-	top: 0;
-	right: 0;
-	bottom: 28px;
-	width: 28px;
-}
-
-.bottom-scroll-bar {
-	right: 28px;
-	bottom: 0;
-	left: 0;
-	height: 28px;
-}
-
-.up-scroll-button, .right-scroll-button, .down-scroll-button, .left-scroll-button {
+.up-scroll-button, .down-scroll-button {
 	position: absolute;
+	right: 0;
 	width: 28px;
 	height: 28px;
 	background-color: rgb(191,191,191);
 }
 
-.up-scroll-button::after, .right-scroll-button::after, .down-scroll-button::after, .left-scroll-button::after {
+.up-scroll-button::after, .down-scroll-button::after {
 	content: '';
 	display: block;
 	position: absolute;
@@ -208,28 +199,12 @@ hr {
 	transform: rotate(0);
 }
 
-.right-scroll-button {
-	right: 0;
-}
-
-.right-scroll-button::after {
-	transform: rotate(90deg);
-}
-
 .down-scroll-button {
 	bottom: 0;
 }
 
 .down-scroll-button::after {
 	transform: rotate(180deg);
-}
-
-.left-scroll-button {
-	left: 0;
-}
-
-.left-scroll-button::after {
-	transform: rotate(270deg);
 }
 
 .minimize-button, .maximize-button, .close-button {
