--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ html {
 	box-sizing: border-box;
 }
 
-*, *:before, *:after {
+*, *::before, *::after {
 	box-sizing: inherit;
 	font-size: inherit;
 }
