--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,8 @@ body {
 	padding: 0;
 	color: rgb(0,0,0);
 	background-color: rgb(0,128,128);
-	font-family: 'PX Sans Nouveaux', sans-serif;
-	font-size: 12px;
+	font-family: 'Consolas', 'Menlo', 'Monaco', 'Lucida Console', 'Liberation Mono', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Courier New', monospace, sans-serif;
+	font-size: 16px;
 	-webkit-text-size-adjust: 100%;
 }
 
