--- a/styles.css
+++ b/styles.css
@@ -78,8 +78,8 @@ hr {
 .window-title-bar {
 	display: flex;
 	align-items: center;
-	height: 30px;
-	line-height: 30px;
+	height: 28px;
+	line-height: 28px;
 	color: rgb(255,255,255);
 	background-color: rgb(0,10,123);
 	user-select: none;
@@ -108,7 +108,8 @@ hr {
 .window-text {
 	position: relative;
 	z-index: 1;
-	margin-right: 28px;
+	min-height: 84px;
+	margin-right: 26px;
 	padding: 4px;
 	background-color: rgb(255,255,255);
 }
@@ -167,7 +168,7 @@ hr {
 	top: 0;
 	right: 0;
 	bottom: 0;
-	width: 28px;
+	width: 26px;
 	background-image:
 		linear-gradient(45deg, rgb(255,255,255) 25%, transparent 25%),
 		linear-gradient(135deg, rgb(255,255,255) 25%, transparent 25%),
@@ -180,8 +181,8 @@ hr {
 .up-scroll-button, .down-scroll-button {
 	position: absolute;
 	right: 0;
-	width: 28px;
-	height: 28px;
+	width: 26px;
+	height: 26px;
 	background-color: rgb(191,191,191);
 }
 
@@ -194,6 +195,7 @@ hr {
 	bottom: 0;
 	left: 0;
 	background-image: url('icons/arrow.svg');
+	background-position: center;
 	opacity: 0.45;
 }
 
@@ -214,23 +216,41 @@ hr {
 }
 
 .minimize-button, .maximize-button, .close-button {
-	position: absolute;
-	top: 3px;
-	width: 28px;
+	position: relative;
+	width: 26px;
 	height: 24px;
 	background-color: rgb(191,191,191);
 }
 
-.minimize-button {
-	right: 62px;
+.minimize-button::after, .maximize-button::after, .close-button::after {
+	content: '';
+	display: block;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background-position: center;
 }
 
-.maximize-button {
-	right: 34px;
+.minimize-button {
+	margin-left: auto;
+}
+
+.minimize-button::after {
+	background-image: url('icons/minimize.svg');
+}
+
+.maximize-button::after {
+	background-image: url('icons/maximize.svg');
 }
 
 .close-button {
-	right: 3px;
+	margin: 0 3px;
+}
+
+.close-button::after {
+	background-image: url('icons/close.svg');
 }
 
 ::selection {
