--- a/styles.css
+++ b/styles.css
@@ -38,14 +38,53 @@ main {
 }
 
 p, h1, h2, h3, h4, h5, h6 {
-	font-weight: normal;
-	margin: 0;
+	margin: 16px 0;
 	padding: 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h2, h3, h4, h5, h6 {
 	text-transform: uppercase;
 }
+
+h1 span, h2 span, h3 span, h4 span, h5 span, h6 span {
+	text-transform: lowercase;
+}
+
+/*
+h1::before {
+	content: '# ';
+}
+*/
+
+h2::before {
+	content: '## ';
+}
+
+h3::before {
+	content: '### ';
+}
+
+h4::before {
+	content: '#### ';
+}
+
+h5::before {
+	content: '##### ';
+}
+
+h6::before {
+	content: '###### ';
+}
+
+/*
+strong::before, strong::after {
+	content: '**';
+}
+
+em::before, em::after {
+	content: '*';
+}
+*/
 
 a {
 	color: #0000EE;
