--- a/styles.css
+++ b/styles.css
@@ -87,19 +87,21 @@ em::before, em::after {
 */
 
 a {
-	color: #0000EE;
+	color: rgb(0,0,238);
 	text-decoration: underline;
 	cursor: pointer;
 }
 
-a:visited {
-	color: #551A8B;
+a:active {
+	color: rgb(238,0,0);
 }
 
 hr {
 	margin: 8px 0;
 	border: 0;
 	border-top: 2px dashed rgb(0,0,0);
+a:visited {
+	color: rgb(85,26,139);
 }
 
 .window {
