--- a/styles.css
+++ b/styles.css
@@ -120,6 +120,10 @@ a:visited {
 	line-height: 28px;
 	color: rgb(255,255,255);
 	background-color: rgb(0,10,123);
+	font-family: 'MS Sans Serif', monospace, sans-serif;
+	font-size: 14px;
+	font-weight: bold;
+	letter-spacing: 1.5px;
 	user-select: none;
 }
 
@@ -130,6 +134,9 @@ a:visited {
 	margin: 0;
 	padding: 0;
 	list-style-type: none;
+	font-family: 'MS Sans Serif', monospace, sans-serif;
+	font-size: 14px;
+	letter-spacing: 1px;
 	user-select: none;
 }
 
