--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,12 @@ a:visited {
 	user-select: none;
 }
 
+.window-program-icon {
+	width: 20px;
+	height: 20px;
+	margin: 0 8px 0 4px;
+}
+
 .window-menu-bar {
 	display: flex;
 	align-items: center;
