--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
+/* Inspired and influenced by: */
+/* https://github.com/Baddaboo/ClassicKit */
+/* https://guidebookgallery.org/screenshots/win95 */
+/* https://github.com/felixrieseberg/windows95 */
+/* https://copy.sh/v86/?profile=windows95 */
+/* https://gist.github.com/dfrankland/f6fed3e3ccc42e3de482b324126f9542 */
+
+/* TODO: https://autoprefixer.github.io/ */
+
+/*
 @font-face {
 	font-family: 'PX Sans Nouveaux';
 	src: url('fonts/PX Sans Nouveaux.ttf') format('truetype');
